@@ -1,6 +1,6 @@
 Package: robustbase
 Version: 0.5-0
-Date: 2009-06-05
+Date: 2009-11-11
 Title: Basic Robust Statistics
 Author: Original code by many authors, notably
 	Peter Rousseeuw and Christophe Croux, see file 'Copyrights';
